# Resume-RAG

./: .gitignore  pyproject.toml
.github/workflows/: automated-tests.yml
src/rag_resume/: __init__.py  _types.py  changeset.py  json.py
src/rag_resume/agentic/backends/langchain/: embeddings.py  graph.py  llms.py
src/rag_resume/agentic/graphs/: edges.py  graph.py  types.py
src/rag_resume/agentic/llms/: chat.py  embedding.py
src/rag_resume/backends/langchain/: embeddings.py  graph.py  llms.py
src/rag_resume/graph/: edges.py  graph.py  types.py
src/rag_resume/llms/: chat.py  embedding.py
src/rag_resume/pipelines/: resume_builder.py  types.py
tests/helpers/: __init__.py  graph.py
tests/unit/: test_changeset.py
tests/unit/agentic/backend/: test_graph.py
tests/unit/agentic/backend/langchain/: test_graph.py
