[project]
name = "RAG-resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tyler Allen", email = "tallen12@users.noreply.github.com" },
]

requires-python = ">=3.12"
dependencies = [
    "basedpyright>=1.36.2",
    "fastapi>=0.118.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-ollama>=0.3.10",
    "langgraph>=0.6.8",
    "pydantic-settings>=2.11.0",
    "seriacade[pydantic]",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
rag-resume = "rag_resume:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.36.2",
    "hypothesis>=6.142.1",
    "networkx>=3.5",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]


[tool.ruff]
line-length = 120 # Set your desired line length here

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint]
select = ["ALL", "D"]
ignore = [
    # Recommended disabled Rules https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC002",
    # Generic parameters
    "UP046",
    # Docstring related
    "D100",
    "D102",
    "D104",
    "D105",
    "D107",
    "TD002",
    "TD003"
]

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.sources]
seriacade = { git = "https://github.com/tallen12/seriacade" }

